2014-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_new_with_max): Remove useless
	comparison as an unsigned int will never be < 0.

2014-02-21  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_server.c (load_file, unload_file): Add function comments.
	Rename to load_gnutls_file and unload_gnutls_file.
	(client_cert_callback): Adjust functions calls.

	* misc/openvas_server.h: Add functions headers.

	* misc/network.c (load_file, unload_file): Remove unused functions.
	(load_cert_and_key): Use functions from misc/openvas_server.c and
	adjust calls accordingly. Remove double-free call.

2014-02-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_server.c (server_new_internal): Constify string arguments.
	(load_file, unload_file, sert_cert_file, set_key_file, get_key_file,
	(get_cert_file, client_cert_callback, openvas_server_open_with_cert):
	New functions.
	(openvas_server_open): Call openvas_server_open().

	* misc/openvas_server.h: Add include and function prototype.

2014-02-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0+beta6.

2014-02-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 7.0+beta5 release.

	* CHANGES: Updated.

2014-02-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvti_from_keyfile): Call g_warning instead of g_error
	which causes the scanner to abort when an erroneous nvti cache file is
	present.

2014-02-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_new_with_max): New function,
	allows setting a max number of hosts limit.
	(openvas_hosts_new): Call openvas_hosts_new_with_max().

	* base/openvas_hosts.h: Add new function prototype accordingly.

2014-02-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (kb_get_port_state_proto): Fix kb_item_get_int return